// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary more than one expense 1`] = `
<div>
  <h2>
    Viewing 
    2
     
    expenses
     totaling 
    $12,348.76
  </h2>
</div>
`;

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totaling 
    $12.34
  </h2>
</div>
`;
